--- a/Iks.WebApi.Dominio.Persistencia/Iks.WebApi.Dominio.Persistencia.csproj
+++ b/Iks.WebApi.Dominio.Persistencia/Iks.WebApi.Dominio.Persistencia.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
