--- a/Iks.WebApi.Aplicacion.Validadores/Iks.WebApi.Aplicacion.Validadores.csproj
+++ b/Iks.WebApi.Aplicacion.Validadores/Iks.WebApi.Aplicacion.Validadores.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.10.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Iks.WebApi.Dominio.DTOs\Iks.WebApi.Dominio.DTOs.csproj" />
+  </ItemGroup>
+
 </Project>
