--- a/Iks.WebApi.Aplicacion.Interfaces/Iks.WebApi.Aplicacion.Interfaces.csproj
+++ b/Iks.WebApi.Aplicacion.Interfaces/Iks.WebApi.Aplicacion.Interfaces.csproj
@@ -7,6 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Iks.WebApi.Dominio.DTOs\Iks.WebApi.Dominio.DTOs.csproj" />
     <ProjectReference Include="..\Iks.WebApi.Transversal.Modelos\Iks.WebApi.Transversal.Modelos.csproj" />
   </ItemGroup>
