se agrega watchdog

--- a/Iks.WebApi/appsettings.json
+++ b/Iks.WebApi/appsettings.json
@@ -25,5 +25,9 @@
       }
     ],
     "EvaluationTimeInSeconds": 5
+  },
+  "WatchDog": {
+    "WatchPageUsername": "admin",
+    "WatchPagePassword": "@12345"
   }
 }
