--- a/Iks.WebApi/appsettings.json
+++ b/Iks.WebApi/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Dev": "Server=DESKTOP-GKDF1C3;User Id=sa;Password=0Sismasalud;Database=GigaRedDev;Trusted_Connection=false;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "Dev": "Server=DESKTOP-GKDF1C3;User Id=sa;Password=0Sismasalud;Database=GigaRedDev;Trusted_Connection=false;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    "WatchDogLog": "Server=DESKTOP-GKDF1C3;User Id=sa;Password=0Sismasalud;Database=WatchDogLogDb;Trusted_Connection=false;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "Config": {
     "OriginsCors": [
